duplicated code moved to super class. Commented text deleted.